# 3d-terminal-renderer

./: Cargo.toml  LICENSE  README.md  config.json  cornell_box.json  demo.json  examples.json  world.json
.github/: workflows
.github/workflows/: build.yml
models/: bunny.mtl  cube.json  octahedron.json  square.json  teapot.mtl  test.mtl  tetrahedron.json
scenes/: bunny_demo.json  car_demo.json  cornell_box_demo.json  cube_demo.json  demo.json  teapot_demo.json  test.json
src/: buffer.rs  camera.rs  config.rs  constants.rs  entity.rs  geometry.rs  graphics.rs  keyboard.rs  lib.rs  light.rs  main.rs  math.rs  model_loader.rs  model_loaders.rs  model_reader.rs  models.rs  renderer.rs  scene_loader.rs  terminal.rs  utils.rs  world_loader.rs  world_objects.rs
src/camera/: controllable_perspective_camera.rs  orbiting_perspective_camera.rs  static_perspective_camera.rs
src/model_loaders/: json_model_loader.rs  obj_model_loader.rs
src/models/: json_model_loader.rs  model_store.rs  mtl_loader.rs  obj_model_loader.rs
test/: geometry_tests.rs
