[package]
name = "terminal_renderer"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_terminal_renderer"
path = "src/lib.rs"

[[bin]]
name = "terminal_renderer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
ctrlc = "*"
include_dir = "*"
nalgebra = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "*"
